[gd_scene load_steps=5 format=3 uid="uid://bdbr2fjo33sln"]

[ext_resource type="Script" path="res://scenes/UI/Inventory/inventory_slot.gd" id="1_m1wra"]
[ext_resource type="Texture2D" uid="uid://cupv3xflutar2" path="res://textures/UI/Sqare.png" id="1_p1fji"]
[ext_resource type="Texture2D" uid="uid://c53lfhpydfj1o" path="res://textures/Potions/Red Potion.png" id="2_ht6fj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xc5n"]

[node name="inventory_slot" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
script = ExtResource("1_m1wra")

[node name="DetailPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 127.0
offset_top = -104.0
offset_right = 296.0
offset_bottom = -6.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="DetailPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 97.0

[node name="ItemName" type="Label" parent="DetailPanel/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_right = 166.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Item Name"

[node name="ItemType" type="Label" parent="DetailPanel/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 20.0
offset_right = 167.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Item Type"

[node name="ItemEffect" type="Label" parent="DetailPanel/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 38.0
offset_right = 161.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Item Effects"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 40.0
offset_bottom = 38.0
texture = ExtResource("1_p1fji")

[node name="ItemSprite" type="Sprite2D" parent="TextureRect"]
position = Vector2(20, 18)
texture = ExtResource("2_ht6fj")

[node name="ItemQuantity" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 40.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "12"

[node name="ItemButton" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 39.0
offset_bottom = 39.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_6xc5n")
action_mode = 0

[node name="UsePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -26.0
offset_top = -67.0
offset_right = 124.0
offset_bottom = -6.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="UsePanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 60.0

[node name="UseButton" type="Button" parent="UsePanel/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 72.0
offset_bottom = 57.0
text = "Use"

[node name="DiscardButton" type="Button" parent="UsePanel/ColorRect"]
layout_mode = 0
offset_left = 74.0
offset_top = 3.0
offset_right = 147.0
offset_bottom = 57.0
text = "Discard"

[connection signal="mouse_entered" from="TextureRect/ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="TextureRect/ItemButton" to="." method="_on_item_button_pressed"]
